# interpretable-splade-classifier

./: .gitignore  CLAUDE.md  GAP_ANALYSIS.md  LITERATURE_REVIEW.md  Makefile  README.md  pyproject.toml  reproduce_results.sh  requirements.txt  setup.py  updated_research_direction.md
configs/: default.yaml  gpt2_small.yaml
docs/: config_inventory.md  config_pruning.md
experiments/: civilcomments.yaml  long_context.yaml  surgery.yaml  surgery_beavertails.yaml  verify.yaml  verify_ablation.yaml  verify_ablation_1k.yaml  verify_full.yaml
lexical_sae/: __init__.py  config.py  inference.py  runtime.py
notebooks/: splade_sklearn_benchmark.ipynb
papers/: 1911.03429_eraser.md  2109.10086_splade_v2.md  2305.10496_soft_metrics.md  2308.14272_goodhart.md  2309.08600_sae_interpretability.md  2403.19647_sparse_feature_circuits.md  2408.08137_naopc.md  2410.02970_f_fidelity.md  2412.07992_cb_llm.md  2502.11367_sae_classification.md
scripts/: eval.py  evaluate.py  train.py
spalf/: checkpoint.py  config.py  evaluation.py  training.py  whitening.py
splade/: inference.py  intervene.py  pipelines.py
splade_classifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  adversarial.py  benchmark.py  config.py  cuda.py  data.py  data_loader.py  evaluation.py  faithfulness.py  interpretability_benchmark.py  kernels.py  models.py  neural_vectorizer.py  regularizers.py  train.py  utils.py
tests/: test_baselines.py  test_bcos.py  test_circuits.py  test_data_loader.py  test_eraser.py  test_layerwise.py  test_no_hidden_controls.py  test_polysemy.py  (+2 more)
(+189 files in other folders)
