[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.0.0", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splade-classifier"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "triton>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
