[project]
name = "lexical-sae"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.6.0",
    "transformers==4.48.3",
    "datasets==3.2.0",
    "numpy==2.1.3",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "triton>=3.1.0",
    "safetensors==0.4.5",
    "torchmetrics>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spalf"]
